Adição de funções no JS e adaptação para ORM

--- a/web/index.html
+++ b/web/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
-          
+    <script type="text/javascript" src="/eel.js"></script>
 </head>
 <body>
     <header>
@@ -27,8 +27,19 @@
         </div>
     </header>
     <main>
-
+        <!-- TESTE -->
+        <p id="cli_nome">Valtair</p>
+        <p id="cli_celular">53991939740</p>
+        <p id="cli_email">valtair@wtech.com</p>
+        <p id="cli_acesso">333222111</p>
+        <p id="cli_sistema">1</p>
     </main>
+    
     <script src="js/index.js"></script>
+    <script src="js/categoria.js"></script>
+    <script src="js/sistema.js"></script>
+    <script src="js/status.js"></script>
+    <script src="js/cliente.js"></script>
+
 </body>
 </html>
