--- a/web/index.html
+++ b/web/index.html
@@ -19,20 +19,43 @@
         <div>
             <nav>
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Registros</a></li>
-                    <li><a href="">Cadastrar</a></li>
+                    <li><a href="interface/atendimento.html">Atendimento</a></li>
+                    <li><a href="interface/cliente.html">Cliente</a></li>
+                    <li><a href="interface/categoria.html">Categoria</a></li>
+                    <li><a href="interface/sistema.html">Sistema</a></li>
+                    <li><a href="interface/status.html">Status</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <main>
-        <!-- TESTE -->
-        <p id="cli_nome">Valtair</p>
-        <p id="cli_celular">53991939740</p>
-        <p id="cli_email">valtair@wtech.com</p>
-        <p id="cli_acesso">333222111</p>
-        <p id="cli_sistema">1</p>
+        <!-- grid with a box who contains a icon and text for every 'li' un nav ul -->
+
+        <section>
+            <div class="grid-container">
+                <a href="interface/atendimento.html" class="grid-item">
+                    <i class="devicon-feathersjs-original"></i>
+                    <h2>Atendimento</h2>
+                </a>
+                <a href="interface/cliente.html" class="grid-item">
+                    <i class="devicon-nestjs-plain"></i>
+                    <h2>Cliente</h2>
+                </a>
+                <a href="interface/categoria.html" class="grid-item">
+                    <i class="devicon-firebase-plain"></i>
+                    <h2>Categoria</h2>
+                </a>
+                <a href="interface/sistema.html" class="grid-item">
+                    <i class="devicon-jeet-plain"></i>
+                    <h2>Sistema</h2>
+                </a>
+                <a href="interface/status.html" class="grid-item">
+                    <i class="devicon-julia-plain"></i>
+                    <h2>Status</h2>
+                </a>
+            </div>
+        </section>
+
     </main>
     
     <script src="js/index.js"></script>
