Funcionalidade completa, aguardando refatoração e interface adequada

--- a/web/index.html
+++ b/web/index.html
@@ -53,16 +53,20 @@
                     <i class="devicon-julia-plain"></i>
                     <h2>Status</h2>
                 </a>
+                <a href="interface/status.html" class="grid-item">
+                    <i class="devicon-codecov-plain"></i>
+                    <h2>Relatório</h2>
+                </a>
             </div>
         </section>
 
     </main>
-    
     <script src="js/index.js"></script>
     <script src="js/categoria.js"></script>
     <script src="js/sistema.js"></script>
     <script src="js/status.js"></script>
     <script src="js/cliente.js"></script>
+    <script src="js/atendimento.js"></script>
 
 </body>
 </html>
